fixed broken styles | todo: add common colors to variables.scss

--- a/client/src/app/components/Button/button.scss
+++ b/client/src/app/components/Button/button.scss
@@ -8,23 +8,8 @@
   font-size: 16px;
   transition: background 300ms ease, border 300ms ease;
 
-  &:not(:disabled){
-    cursor: pointer;
-  }
-
-  &.secondary{
-    border: solid $small-border #ccd0d2;
-    background-color: #ffffff;
-    color: black;
-
-    &:hover{
-      border: solid $small-border #008575;
-    }
-  
-    &:disabled{
-      opacity: 0.5;
-      border: solid 1px #e4e4e4;
-    }
+  &:focus{
+    outline: none;
   }
 
   &.primary{
@@ -38,6 +23,22 @@
 
     &:disabled{
       opacity: 0.5;
+      cursor: unset;
+    }
+  }
+
+  &.secondary{
+    border: solid $small-border #ccd0d2;
+    background-color: #ffffff;
+    color: black;
+
+    &:hover{
+      border: solid $small-border #008575;
+    }
+  
+    &:disabled{
+      opacity: 0.5;
+      border: solid $small-border #ccd0d2;
       cursor: unset;
     }
   }
